--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Загородная недвижимость</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet/less" type="text/css" href="less/main.less">
     <script src="js/less.js" type="text/javascript"></script>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
