--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <meta name="Keywords" content=""/>
     <title>Загородная недвижимость</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet/less" type="text/css" href="less/main.less">
-    <script src="js/less.js" type="text/javascript"></script>
+   
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet/less" type="text/css" href="less/main.less"> 
+    <script src="/js/less.js" type="text/javascript"></script>
+   
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="./js/scripts.js"></script>
+    <script src="./js/scripts.js"></script> 
+
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Наверх</button>
@@ -46,7 +48,9 @@
                 </li> 
                  </ul>
           </nav>
-          <a href="#modal" class="button openModal">ЗАКАЗАТЬ ЗВОНОК</a>
+          <a href="#modal" class="button openModal">
+              ЗАКАЗАТЬ ЗВОНОК
+          </a>
                
         </div>
       </div>
@@ -188,6 +192,7 @@
         </div>
     </div>
     </div>
+    </div>
 
     </section>
 
@@ -207,6 +212,10 @@
                 <img src="img/clock.png" width="122" height="122">
                 <p class="section-do-item-description">8:00 - 20:00</p>
             </li>
+            <li class="section-do-item">
+                <img src="img/phone-call.svg" width="122" height="122">
+                <p class="section-do-item-description">8 (351) 456-78-97</p>
+            </li>
          </ul>
         </div>
 
@@ -222,7 +231,7 @@
                     <img src="/img/logo.svg" alt="" class="footer-logo-img">    
                     </a>
                     <small class="footer-copyrights"> 
-                        Copyright © 2020 Все права защищены
+                        Copyright © 2021 Все права защищены
                     </small>
             </div>
             <div class="footer-right">
@@ -257,7 +266,7 @@
            
             <a href="#close" title="Закрыть"></a>
         </div>   
-        </div>
+    </div>
 <!---Скрипт открытия картинки-->
      <script>
                  $(document).ready(function() {
