--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>Загородная недвижимость</title>
     <!-- Bootstrap CSS -->
    
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet/less" type="text/css" href="less/main.less"> 
-    <script src="/js/less.js" type="text/javascript"></script>
+    <script src="js/less.js" type="text/javascript"></script>
    
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
